# sicar-remade

./: .gitignore  README.md  angular.json  biome.json  flake.nix  package-lock.json  package.json  tsconfig.json
scripts/: admin_boundaries.sh  administrative.sh  move_files.sh  sicar_area_imovel_process.sh  sicar_download.sh  sicar_download_single.sh  sicar_to_parquet.sh  sicar_to_pmtiles.sh  terras_indigenas.sh  to_geoparquet.sh
server/: Pipfile  api.py  pyproject.toml
src/: index.html  styles.css
src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.service.ts
src/app/CAR/: car-details.component.css  car-details.component.html  car-details.component.spec.ts  car-details.component.ts  index.ts
src/app/CAR/car-details-data/: car-details-data.component.css  car-details-data.component.html  car-details-data.component.spec.ts  car-details-data.component.ts
src/app/components/: index.ts
src/app/components/car-details/: car-details.component.css  car-details.component.html  car-details.component.ts
src/app/components/layers/: layers.component.css  (+2 more)
src/app/core/: map-style.ts  providers.ts
src/app/layers/: index.ts  layers.component.css  layers.component.html  layers.component.ts
src/app/map/: index.ts  map.component.ts  map.directive.ts  map.service.ts
src/app/pipes/: car-status.pipe.spec.ts
src/app/search/: car_sample.json  index.ts  search.component.html  search.component.ts  search.service.ts
src/app/services/: car.service.spec.ts  car.service.ts  car_sample.json  index.ts  search.service.ts
(+23 files in other folders)
