[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["duckdb>=1.1.3", "fastapi[standard]>=0.115.6"]

[dependency-groups]
dev = ["basedpyright>=1.23.1", "ruff>=0.8.4"]

[tool.basedpyright]
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
